.k8s/cluster-setup/traefik-dashboard/ingressroute.yml
# manifest file for traefik dashboard ingress route
# ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-ingressroute
  namespace: traefik
spec:
  entryPoints: [web, websecure]
  routes:
    - kind: Rule
      match: Host(`traefik.superfast-delivery.yashraj-jaiswal.site`) && PathPrefix(`/`) && !PathPrefix(`/.well-known/acme-challenge/`)
      middlewares:
        - name: dashboard-redirectscheme
          namespace: traefik
        - name: dashboard-basic-auth
          namespace: traefik
      services:
        - kind: TraefikService
          name: api@internal
  tls:
    secretName: traefik.superfast-delivery.yashraj-jaiswal.site
